# menu-recipe-app

./: .gitignore  QUICKSTART.md  README.md  build-all.mts  inline-assets.mts  package.json  pyproject.toml  start.sh  test.sh
pizzaz_server_python/: README.md  main.py
server/: main.py
server/ui/: dish-gallery.html  recipe-card.html
server/ui-widget/: index.html  package-lock.json  package.json  vite.config.ts
server/ui-widget/src/: App.tsx  main.tsx  setupTests.ts  types.ts
server/ui-widget/src/__tests__/: App.test.tsx  DishCard.test.tsx  ErrorBoundary.test.tsx
server/ui-widget/src/components/: DishCard.tsx  ErrorBoundary.tsx
solar-system_server_python/: main.py
